force-app/main/default/objects/Map_Sub_Region__c/Map_Sub_Region__c.object-meta.xml
<CustomObject>
    <label>Map Sub Region</label>
    <nameField>
        <label>Sub Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Sub Region</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>