force-app/main/default/objects/Map_Sub_Region__c/fields/ASM__c.field-meta.xml
<CustomField>
    <fullName>ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Map_Sub_Region</relationshipName>
    <type>Lookup</type>
</CustomField>