force-app/main/default/objects/Map_Sub_Region__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipName>Map_Region_User</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>