force-app/main/default/objects/Map_Sub_Region__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Map_Region_User</relationshipName>
    <type>Lookup</type>
</CustomField>